# HBS_GAMES

./: .coverage  .gitignore  DefineExpData.py  GlobalSearch.py  ModelSelection.py  PlotPL_ConsequencesOnly_.py  README.md  Run.py  Settings.py  Solvers.py  mypy.ini  paper.mplstyle.py  pylintrc  pyproject.toml  tox.ini
.github/: build.yml  documentation.yml  lint.yml
delete/: Analysis.py  REFERENCE TRAINING DATA.xlsx  Run.py  Saving.py  Test.py
docs/: _config.yml  conf.py  games.config.experimental_data.rst  games.config.rst  games.config.settings.rst  games.models.rst  games.models.set_model.rst  games.models.synTF.rst  games.modules.parameter_estimation.global_search.rst  games.modules.parameter_estimation.optimization.rst  games.modules.parameter_estimation.run_parameter_estimation.rst  games.modules.parameter_estimation_method_evaluation.rst  games.modules.parameter_estimation_method_evaluation.run_parameter_estimation_method_evaluation.rst  games.modules.parameter_profile_likelihood.calculate_parameter_profile_likelihood.rst  games.modules.parameter_profile_likelihood.calculate_threshold.rst  games.modules.parameter_profile_likelihood.rst  games.modules.parameter_profile_likelihood.run_parameter_profile_likelihood.rst  games.modules.rst  games.modules.solve_single.rst  games.paper.rst  games.plots.plots_parameter_estimation.rst  games.plots.plots_pem_evaluation.rst  games.plots.plots_timecourses.rst  games.plots.plots_training_data.rst  games.rst  games.utilities.metrics.rst  games.utilities.rst
src/games/: analysis.py  config.py  models.py  (+13 more)
tests/: testing.py
(+718 files in other folders)
